fixed wrong flags in makefile.am

--- a/pzb/Makefile.am
+++ b/pzb/Makefile.am
@@ -1,7 +1,7 @@
-AM_CFLAGS = $(libpartialzip_CFLAGS)
+AM_CXXFLAGS = $(libpartialzip_CFLAGS)
 AM_LDFLAGS = $(libpartialzip_LIBS)
 
 bin_PROGRAMS	= pzb_tool
-pzb_tool_CFLAGS = $(AM_CFLAGS)
+pzb_tool_CXXFLAGS = $(AM_CXXFLAGS)
 pzb_tool_LDADD = $(AM_LDFLAGS)
 pzb_tool_SOURCES = pzb.cpp main.cpp
