--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,7 @@
 AC_PREREQ([2.69])
-AC_INIT([partialZipBrowser], [1.0], [tihmstar@gmail.com])
-AM_INIT_AUTOMAKE([foreign])
+AC_INIT([partialZipBrowser], m4_esyscmd([git rev-list --count HEAD | tr -d '\n']), [tihmstar@gmail.com])
+AM_INIT_AUTOMAKE(partialZipBrowser, m4_esyscmd([git rev-list --count HEAD | tr -d '\n']))
+
 
 AC_CONFIG_SRCDIR([pzb/pzb.hpp])
 AC_CONFIG_HEADERS([config.h])
@@ -8,6 +9,9 @@ AC_CONFIG_HEADERS([config.h])
 # Checks for programs.
 AC_PROG_CXX
 CXXFLAGS+=" -std=c++11"
+CXXFLAGS+=" -D PZB_VERSION_COMMIT_COUNT=\\\"$(git rev-list --count HEAD | tr -d '\n')\\\""
+CXXFLAGS+=" -D PZB_VERSION_COMMIT_SHA=\\\"$(git rev-parse HEAD | tr -d '\n')\\\""
+
 
 AC_CANONICAL_HOST
 # Check for operating system
@@ -21,7 +25,7 @@ esac
 AC_PROG_INSTALL
 
 # Checks for libraries.
-PKG_CHECK_MODULES(libfragmentzip, libfragmentzip >= 1.0)
+PKG_CHECK_MODULES(libfragmentzip, libfragmentzip >= 41)
 
 # Checks for header files.
 AC_CHECK_HEADERS([string.h termios.h unistd.h])
